[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "function-grapher"
version = "0.1.0"
description = "Graph absolute, square-root, linear and quadratic functions using Python."
authors = [{name = "ZayThihaAung"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.21",
  "matplotlib>=3.4",
]
